# onsendl

./: LICENSE  Pipfile  README.md  pyproject.toml
onsendl/: __main__.py
src/onsendl/: __init__.py  html_parser.py
