[project]
name = "onsendl"
version = "0.1.0"
description = "audio download tool for onsen listener"
readme = "README.md"
authors = [
    { name = "h-takeyeah", email = "61489178+h-takeyeah@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "m3u8>=6.0.0",
]

[project.scripts]
onsendl = "onsendl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
